# SutraOS

./: .gitignore  credentials.md  docker-compose.yml  package-lock.json  package.json  sutraos_architecture_dashboard.html
backend/: Dockerfile  Dockerfile.dev  auth.py  database.py  db_migrations.py  docker-entrypoint.sh  main.py  models.py  requirements.txt  schemas.py  seed.py
backend/scratch/: test_complete_facilities_system.py
backend/uploads/: Juno
database/: sutraos_production_schema.sql
database/init/: 02_seed.sql
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: Academics.tsx  Admissions.tsx  App.tsx  Dashboard.tsx  Directory.tsx  Documents.tsx  Facilities.tsx  Finance.tsx  FinanceHR.tsx  Layout.tsx  Login.tsx  MegaProfile.tsx  MyHR.tsx  PlacementsCampus.tsx  Research.tsx  StudentDetailModal.tsx  api.ts  index.css
frontend/src/context/: AuthContext.tsx
gateway/: .env  Cargo.toml  Dockerfile  Dockerfile.dev
gateway-node/: db.js  generate_rust_db.js  package-lock.json  package.json  server.js  test_api.js
gateway-node/middleware/: signature.js
gateway-node/services/: attendance.js  hostel.js  hr.js  placement.js
gateway/middleware/: auth.js
gateway/services/: finance.js  grading.js  library.js  lms.js  registration.js  timetable.js  transport.js
gateway/src/: db.rs  main.rs  models.rs
gateway/src/middleware/: auth.rs  mod.rs  signature.rs
nginx/: default.conf
scratch/: test_hostel_flow.py  test_multi_role.py
