[package]
name = "sutraos-gateway"
version = "0.1.0"
edition = "2021"
description = "Enterprise API Gateway and Authentication Router for SutraOS"

[dependencies]
axum = { version = "0.7", features = ["macros", "tracing"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "json", "uuid", "chrono"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
bcrypt = "0.15"
lazy_static = "1.4"
rand = "0.8"
ring = "0.17.14"
hex = "0.4.3"
http-body-util = "0.1.3"
